--- a/templates/components/post/report_post_modal.html
+++ b/templates/components/post/report_post_modal.html
@@ -25,9 +25,9 @@
                 <!-- Modal body -->
                 <div class="p-4 md:p-5 space-y-4">
 
-                    <label for="report_reason" class="block text-sm font-medium text-gray-700 dark:text-gray-200">Reason for report</label>
-                    <select id="report_reason" name="report_reason" 
-                        class="block w-full mt-1 text-sm dark:text-gray-300 dark:bg-gray-800 dark:border-gray-600 dark:focus:ring-gray-700 dark:focus:border-gray-700 focus:ring-2 focus:ring-blue-500 focus:border-blue-500 border-gray-300 rounded-md shadow-sm">
+                    <label for="category" class="block text-sm font-medium text-gray-700 dark:text-gray-200">Reason for report</label>
+                    <select id="category" name="category" 
+                        class="block w-full mt-1 text-sm dark:text-gray-300 dark:bg-gray-800 dark:border-gray-600 dark:focus:ring-gray-700 dark:focus:border-gray-700 focus:ring-2 focus:ring-blue-500 focus:border-blue-500 border-gray-300 rounded-md shadow-sm px-2 py-1">
                         <option value="spam">Spam</option>
                         <option value="hate_speech">Hate speech</option>
                         <option value="violence">Violence</option>
@@ -37,9 +37,9 @@
                         <option value="other">Other</option>
                     </select>
 
-                    <label for="report_description" class="block text-sm font-medium text-gray-700 dark:text-gray-200">Description</label>
-                    <textarea id="report_description" name="report_description" rows="3"
-                        class="block w-full mt-1 text-sm dark:text-gray-300 dark:bg-gray-800 dark:border-gray-600 dark:focus:ring-gray-700 dark:focus:border-gray-700 focus:ring-2 focus:ring-blue-500 focus:border-blue-500 border-gray-300 rounded-md shadow-sm"
+                    <label for="description" class="block text-sm font-medium text-gray-700 dark:text-gray-200">Description</label>
+                    <textarea id="description" name="description" rows="3"
+                        class="block w-full mt-1 text-sm dark:text-gray-300 dark:bg-gray-800 dark:border-gray-600 dark:focus:ring-gray-700 dark:focus:border-gray-700 focus:ring-2 focus:ring-blue-500 focus:border-blue-500 border-gray-300 rounded-md shadow-sm px-2 py-1"
                         placeholder="Please provide more details about the issue"></textarea>
 
                     <p class="text-base leading-relaxed text-gray-500 dark:text-gray-400">
