--- a/templates/components/community/community_events.html
+++ b/templates/components/community/community_events.html
@@ -38,7 +38,14 @@
                             </svg>
                         </button>
                     </div>
-                    <button onclick="event.stopPropagation(); populate_values(['input_event_id', 'txt_event_name'], ['{{event.id}}', '{{event.name}}'])" data-modal-target="delete_community_event" data-modal-toggle="delete_community_event" type="button">
+                    <button 
+                        onclick="
+                            event.stopPropagation(); 
+                            let modal = document.querySelector('#delete_community_event');
+                            modal.querySelector('input[name=event_id]').value = '{{event.id}}';
+                            modal.querySelector('input[name=event_name]').value = '{{event.name}}';    
+                        " 
+                        data-modal-target="delete_community_event" data-modal-toggle="delete_community_event" type="button">
                         <svg rpl="" fill="currentColor" height="14" icon-name="delete-outline" viewBox="0 0 20 20"
                             width="14" xmlns="http://www.w3.org/2000/svg">
                             <path
