--- a/templates/components/post/post_control.html
+++ b/templates/components/post/post_control.html
@@ -11,6 +11,33 @@
     <div id="dropdown-{{post.id}}"
         class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700">
         <ul class="py-2 text-sm text-gray-700 dark:text-gray-200" aria-labelledby="dropdownDefaultButton-{{post.id}}">
+            {% if user.is_authenticated %}
+            <li>
+                <button class = "flex flex-row gap-2 px-4 py-2 w-full hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white" data-saved="{% if post in user_saved_posts %}1{% else %}0{% endif %}"
+                    onclick="event.stopPropagation(); this.dataset.saved == '0' ? savePost(this, '{{post.id}}') : unsavePost(this, '{{post.id}}')"
+                    class="flex flex-row gap-2 px-3 py-1 rounded-xl bg-button_gray ">
+                    {% if post in user_saved_posts %}
+                    <svg rpl="" class="fill-black" fill="currentColor" height="20" icon-name="save-fill" viewBox="0 0 20 20"
+                        width="20" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M15.372 1H4.628A1.629 1.629 0 0 0 3 2.628v16.256a1.113 1.113 0 0 0 1.709.941L10 16.479l5.282 3.34A1.12 1.12 0 0 0 17 18.873V2.628A1.63 1.63 0 0 0 15.372 1Z">
+                        </path>
+                    </svg>
+                    <p>Unsave</p>
+                    {% else %}
+                    <svg rpl="" fill="currentColor" height="20" icon-name="save-outline" viewBox="0 0 20 20" width="20"
+                        xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M4.114 20A1.117 1.117 0 0 1 3 18.884V2.628A1.629 1.629 0 0 1 4.628 1h10.744A1.63 1.63 0 0 1 17 2.628v16.245a1.12 1.12 0 0 1-1.718.946L10 16.479l-5.291 3.346a1.11 1.11 0 0 1-.595.175Zm.514-17.75a.378.378 0 0 0-.378.378v16.009L10 15l5.75 3.636V2.628a.378.378 0 0 0-.378-.378H4.628Z">
+                        </path>
+                    </svg>
+                    <p>Save</p>
+                    {% endif %}
+                </button>
+            </li>
+            {% endif %}
+
+            {% if post.user == request.user %}
             <li>
                 <button
                     class="flex flex-row gap-2 px-4 py-2 w-full hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white" 
@@ -27,7 +54,7 @@
                 </button>
             </li>
             <li>
-                <button onclick="event.stopPropagation(); populate_delete_post_modal_input_values('{{post.id}}')"
+                <button onclick="event.stopPropagation(); document.querySelector('#delete-post-modal').querySelector('input[name=post_id]').value = '{{post.id}}'"
                     data-modal-target="delete-post-modal" data-modal-toggle="delete-post-modal"
                     class="flex flex-row gap-2 px-4 py-2 w-full hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">
                     <svg rpl="" fill="currentColor" height="20" icon-name="delete-outline" viewBox="0 0 20 20" width="20"
@@ -41,9 +68,10 @@
                     </p>
                 </button>
             </li>
-        
+            {% endif %}
+
             <li>
-                <button onclick="event.stopPropagation();"
+                <button onclick="event.stopPropagation(); document.querySelector('#report-post-modal').querySelector('input[name=post_id]').value = '{{post.id}}'"
                     data-modal-target="report-post-modal" data-modal-toggle="report-post-modal"
                     class="flex flex-row gap-2 px-4 py-2 w-full hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">
                     <svg rpl="" fill="currentColor" height="20" icon-name="report-outline" viewBox="0 0 20 20" width="20" xmlns="http://www.w3.org/2000/svg">
