--- a/templates/components/post/post_item.html
+++ b/templates/components/post/post_item.html
@@ -1,7 +1,7 @@
-{% load static %}
 {% load utils %}
+{% load static %}
 
-{% if post.user == user %}
+{% if user.is_authenticated %}
 {% include 'components/post/post_control.html' %}
 {%endif %}
 
@@ -46,149 +46,16 @@
 <!-- VOTES -->
 
 <div class="flex flex-row gap-2 mt-4">
-    <div class="flex flex-row gap-2 px-3 py-1 rounded-xl bg-button_gray">
-        <button onclick="event.stopPropagation(); vote(this, '{{post.id}}', 'upvote')" class="" {% if not user.is_authenticated %} disabled {% endif %}>
-            <svg class="dark:fill-white" width="16" height="20" viewBox="0 0 16 20" fill="none"
-                xmlns="http://www.w3.org/2000/svg">
-                <g clip-path="url(#clip0_336_4807)">
-                    <path
-                        d="M10.2963 18.5602H5.69542C5.4574 18.5596 5.22925 18.4439 5.06094 18.2383C4.89263 18.0327 4.79789 17.7539 4.79747 17.4631V10.7452H1.69982C1.52557 10.74 1.35639 10.6724 1.21327 10.5509C1.07014 10.4293 0.959353 10.2591 0.894627 10.0614C0.811785 9.8498 0.780624 9.61351 0.804874 9.38084C0.829124 9.14816 0.907758 8.92895 1.03136 8.74946L7.329 0.359134C7.41375 0.245982 7.5169 0.155692 7.63186 0.0940402C7.74681 0.0323887 7.87103 0.000733998 7.99657 0.0011018C8.12211 0.00146961 8.24621 0.0338518 8.36092 0.0961762C8.47563 0.158501 8.57843 0.249394 8.66273 0.363041L14.9572 8.74556C15.0821 8.92506 15.1619 9.1449 15.1869 9.37855C15.2118 9.61221 15.1809 9.8497 15.0979 10.0624C15.0334 10.2599 14.9228 10.4299 14.78 10.5515C14.6372 10.673 14.4683 10.7407 14.2943 10.7462H11.1943V17.4641C11.1936 17.7547 11.0988 18.0332 10.9305 18.2386C10.7622 18.444 10.5342 18.5596 10.2963 18.5602ZM5.79697 17.3391H10.1948V9.52412H14.14L7.99587 1.27934L1.80537 9.52412H5.79697V17.3391ZM1.78058 9.55734L1.77099 9.57297C1.77898 9.5671 1.78218 9.5632 1.78058 9.55734Z"
-                        fill="black" />
-                </g>
-                <defs>
-                    <clipPath id="clip0_336_4807">
-                        <rect width="15.992" height="19.5374" fill="white" />
-                    </clipPath>
-                </defs>
-            </svg>
-        </button>
-        <h1 class="vote_count"
-            data-voted="{% if post in user_upvoted_posts%}upvote{%elif post in user_downvoted_posts %}downvote{%endif%}">
-            {{ post|get_vote_counts}}</h1>
-        <button onclick="event.stopPropagation(); vote(this, '{{post.id}}', 'downvote')" {% if not user.is_authenticated %} disabled {% endif %}>
-            <svg width="16" height="17" viewBox="0 0 16 17" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path
-                    d="M7.99952 16.6355C7.87366 16.6355 7.74922 16.608 7.63427 16.5548C7.51933 16.5016 7.41645 16.4239 7.33232 16.3268L1.03472 9.20538C0.909951 9.05291 0.830289 8.8663 0.805311 8.66799C0.780333 8.46968 0.811102 8.2681 0.893919 8.0875C0.958571 7.91977 1.06917 7.77537 1.21206 7.67212C1.35494 7.56888 1.52385 7.51132 1.69792 7.50656H4.79952V1.79929C4.79994 1.55225 4.89473 1.31545 5.06312 1.14077C5.23151 0.96608 5.45978 0.867748 5.69792 0.86731H10.3011C10.5393 0.867748 10.7675 0.96608 10.9359 1.14077C11.1043 1.31545 11.1991 1.55225 11.1995 1.79929V7.50656H14.2987C14.4731 7.511 14.6423 7.56841 14.7855 7.67168C14.9287 7.77494 15.0396 7.91952 15.1043 8.0875C15.1874 8.26749 15.2187 8.46853 15.1945 8.66652C15.1702 8.86451 15.0914 9.05103 14.9675 9.20372L8.66672 16.3318C8.58197 16.4277 8.47886 16.5043 8.36398 16.5566C8.2491 16.6089 8.12497 16.6358 7.99952 16.6355ZM1.85232 8.54395L7.99952 15.5484L14.1923 8.54395H10.1995V1.90469H5.79952V8.54395H1.85232ZM14.2275 8.50245C14.2195 8.50245 14.2163 8.50826 14.2179 8.51324L14.2275 8.50245Z"
-                    fill="black" />
-            </svg>
-        </button>
-    </div>
+    {% include 'components/post/vote_control.html' %}
 
     <!-- COMMENTS -->
     <div class="flex flex-row gap-2 px-3 py-1 rounded-xl bg-button_gray">
-        <div class="flex flex-row gap-2">
             <button onclick="window.location.href=`{% url 'post:post' post.id %}`" {% if not user.is_authenticated %}
                 disabled {% endif %}>
-                <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path
-                        d="M7.725 19.872C7.60442 19.8727 7.48561 19.843 7.37952 19.7857C7.27343 19.7284 7.1835 19.6452 7.118 19.544C7.0409 19.426 6.99989 19.288 7 19.147V16H3.625C2.92921 15.9987 2.2623 15.7217 1.7703 15.2297C1.27831 14.7377 1.00132 14.0708 1 13.375V3.625C1.00106 2.92913 1.27796 2.26207 1.77001 1.77001C2.26207 1.27796 2.92913 1.00106 3.625 1H16.375C17.0708 1.00132 17.7377 1.27831 18.2297 1.7703C18.7217 2.2623 18.9987 2.92921 19 3.625V13.375C18.9987 14.0708 18.7217 14.7377 18.2297 15.2297C17.7377 15.7217 17.0708 15.9987 16.375 16H12.214L8.214 19.681C8.08058 19.8035 7.90614 19.8717 7.725 19.872ZM3.625 2.25C3.26049 2.25053 2.91106 2.39556 2.65331 2.65331C2.39556 2.91106 2.25053 3.26049 2.25 3.625V13.375C2.25053 13.7395 2.39556 14.0889 2.65331 14.3467C2.91106 14.6044 3.26049 14.7495 3.625 14.75H7.625C7.79076 14.75 7.94973 14.8158 8.06694 14.9331C8.18415 15.0503 8.25 15.2092 8.25 15.375V17.95L11.55 14.915C11.6657 14.8089 11.817 14.7501 11.974 14.75H16.374C16.7385 14.7495 17.0879 14.6044 17.3457 14.3467C17.6034 14.0889 17.7485 13.7395 17.749 13.375V3.625C17.7485 3.26066 17.6036 2.91138 17.346 2.65367C17.0885 2.39595 16.7393 2.25079 16.375 2.25H3.625Z"
-                        fill="black" />
+                <svg rpl="" aria-hidden="true" class="icon-comment" fill="currentColor" height="20" icon-name="comment-outline" viewBox="0 0 20 20" width="20" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M10 19H1.871a.886.886 0 0 1-.798-.52.886.886 0 0 1 .158-.941L3.1 15.771A9 9 0 1 1 10 19Zm-6.549-1.5H10a7.5 7.5 0 1 0-5.323-2.219l.54.545L3.451 17.5Z"></path>
                 </svg>
             </button>
             <h1 class="vote_count">{{ post|get_comment_counts }}</h1>
         </div>
-    </div>
-
-    {% if user.is_authenticated %}
-    <button data-saved="{% if post in user_saved_posts %}1{% else %}0{% endif %}"
-        onclick="event.stopPropagation(); this.dataset.saved == '0' ? savePost(this, '{{post.id}}') : unsavePost(this, '{{post.id}}')"
-        class="flex flex-row gap-2 px-3 py-1 rounded-xl bg-button_gray ">
-        {% if post in user_saved_posts %}
-        <svg rpl="" class="fill-black" fill="currentColor" height="20" icon-name="save-fill" viewBox="0 0 20 20"
-            width="20" xmlns="http://www.w3.org/2000/svg">
-            <path
-                d="M15.372 1H4.628A1.629 1.629 0 0 0 3 2.628v16.256a1.113 1.113 0 0 0 1.709.941L10 16.479l5.282 3.34A1.12 1.12 0 0 0 17 18.873V2.628A1.63 1.63 0 0 0 15.372 1Z">
-            </path>
-        </svg>
-        <p>Unsave</p>
-        {% else %}
-        <svg rpl="" fill="currentColor" height="20" icon-name="save-outline" viewBox="0 0 20 20" width="20"
-            xmlns="http://www.w3.org/2000/svg">
-            <path
-                d="M4.114 20A1.117 1.117 0 0 1 3 18.884V2.628A1.629 1.629 0 0 1 4.628 1h10.744A1.63 1.63 0 0 1 17 2.628v16.245a1.12 1.12 0 0 1-1.718.946L10 16.479l-5.291 3.346a1.11 1.11 0 0 1-.595.175Zm.514-17.75a.378.378 0 0 0-.378.378v16.009L10 15l5.75 3.636V2.628a.378.378 0 0 0-.378-.378H4.628Z">
-            </path>
-        </svg>
-        <p>Save</p>
-        {% endif %}
-    </button>
-    {% endif %}
 </div>
-
-
-<script>
-    async function vote(button, postId, voteType) {
-        await fetch(`/post/vote/${postId}/${voteType}`, {
-            method: "POST",
-            headers: {
-              "X-CSRFToken": "{{ csrf_token }}",
-            },
-        }).then(async (response) => {
-            const data = await response.json();
-
-            let vote_count = document.getElementById(postId).querySelector(".vote_count");
-            let current_vote_count = parseInt(vote_count.textContent, 10); 
-
-            voted = vote_count.dataset.voted
-
-            if(voted == "upvote"){
-                if(voteType == "upvote"){
-                    current_vote_count -= 1 
-                    vote_count.dataset.voted = ""
-                }else{
-                    current_vote_count -= 2
-                    vote_count.dataset.voted = "downvote"
-                }
-            }else if (voted == "downvote"){
-                if(voteType == "downvote"){
-                    current_vote_count += 1
-                    vote_count.dataset.voted = ""
-                }else{
-                    current_vote_count += 2
-                    vote_count.dataset.voted = "upvote"
-                }
-            }else{
-                if(voteType == "downvote"){
-                    current_vote_count -= 1
-                    vote_count.dataset.voted = "downvote"
-                }else{
-                    current_vote_count += 1
-                    vote_count.dataset.voted = "upvote"
-                }
-            }
-            vote_count.textContent = current_vote_count
-        });
-    }
-
-    async function savePost(button, postId){
-        let data =  new FormData();
-        data.append("post_id", postId);
-        await fetch(`/post/save/`, {
-            method: "POST",
-            body: data,
-            headers: {
-              "X-CSRFToken": "{{ csrf_token }}",
-            },
-        }).then(async (response) => {
-            button.dataset.saved = 1
-            button.querySelector("p").textContent = "Unsave"
-
-            button.querySelector("svg").children[0].setAttribute("d", "M15.372 1H4.628A1.629 1.629 0 0 0 3 2.628v16.256a1.113 1.113 0 0 0 1.709.941L10 16.479l5.282 3.34A1.12 1.12 0 0 0 17 18.873V2.628A1.63 1.63 0 0 0 15.372 1Z")
-        });
-    }
-
-    async function unsavePost(button, postId){
-        let data =  new FormData();
-        data.append("post_id", postId);
-        await fetch(`/post/unsave/`, {
-            method: "POST",
-            body: data,
-            headers: {
-              "X-CSRFToken": "{{ csrf_token }}",
-            },
-        }).then(async (response) => {
-            button.dataset.saved = 0
-            button.querySelector("p").textContent = "Save"
-            button.querySelector("svg").children[0].setAttribute("d", "M4.114 20A1.117 1.117 0 0 1 3 18.884V2.628A1.629 1.629 0 0 1 4.628 1h10.744A1.63 1.63 0 0 1 17 2.628v16.245a1.12 1.12 0 0 1-1.718.946L10 16.479l-5.291 3.346a1.11 1.11 0 0 1-.595.175Zm.514-17.75a.378.378 0 0 0-.378.378v16.009L10 15l5.75 3.636V2.628a.378.378 0 0 0-.378-.378H4.628Z")
-        });
-    }
-</script>
