--- a/templates/components/community/edit_community_event.html
+++ b/templates/components/community/edit_community_event.html
@@ -7,11 +7,9 @@
 {% block quill %}
 {% load static %}
 
-<script src="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.js"></script>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.css" />
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/quill@2.0.2/dist/quill.snow.css" />
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/quill@2.0.2/dist/quill.bubble.css" />
-<script src="https://cdn.jsdelivr.net/npm/quill@2.0.2/dist/quill.js"></script>
+<script src = "{%static 'js/quill.js' %}"></script>
 {% endblock %}
 
 {% block content %}
