--- a/templates/components/community/create_community_event.html
+++ b/templates/components/community/create_community_event.html
@@ -6,11 +6,10 @@
 {% block quill %}
 {% load static %}
 
-<script src="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.js"></script>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.css" />
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/quill@2.0.2/dist/quill.snow.css" />
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/quill@2.0.2/dist/quill.bubble.css" />
-<script src="https://cdn.jsdelivr.net/npm/quill@2.0.2/dist/quill.js"></script>
+<link rel="stylesheet" href="{% static 'css/quill.snow.css' %}" />
+<link rel="stylesheet" href="{% static 'css/quill.bubble.css' %}" />
+<script src = "{%static 'js/quill.js' %}"></script>
+
 {% endblock %}
 
 {% block content %}
