--- a/templates/components/post/post_control.html
+++ b/templates/components/post/post_control.html
@@ -70,6 +70,7 @@
             </li>
             {% endif %}
 
+            {% if post.user != request.user %}
             <li>
                 <button onclick="event.stopPropagation(); document.querySelector('#report-post-modal').querySelector('input[name=post_id]').value = '{{post.id}}'"
                     data-modal-target="report-post-modal" data-modal-toggle="report-post-modal"
@@ -82,6 +83,7 @@
                     </p>
                 </button>
             </li>
+            {% endif %}
         </ul>
     </div>
 </div>
