--- a/templates/components/community/create_community.html
+++ b/templates/components/community/create_community.html
@@ -193,7 +193,7 @@
             </div>
 
             <div class="create_community_tab hidden">
-                <h1 class="text-xl font-bold">Choose topics for your community. (Optional)</h1>
+                <h1 class="text-xl font-bold">Choose topics for your community. (Optional. Select at most 3)</h1>
                 <div class="flex flex-wrap max-h-[300px] overflow-auto">
                     {% get_global_topics as topics %}
                     {% for topic in topics%}
