--- a/templates/components/search.html
+++ b/templates/components/search.html
@@ -89,7 +89,7 @@
 
         function getResults() {
 
-            fetch('http://localhost:8000/account/search/', {
+            fetch('/account/search/', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
