--- a/templates/components/account/edit-banner-modal.html
+++ b/templates/components/account/edit-banner-modal.html
@@ -19,7 +19,7 @@
           class="flex w-full items-center justify-between rounded-t border-b p-4 dark:border-gray-600 md:p-5"
         >
           <h3 class="text-xl font-semibold text-gray-900 dark:text-white">
-            banner image
+            Banner image
           </h3>
           <button
             type="button"
