--- a/templates/components/community/community_right_bar.html
+++ b/templates/components/community/community_right_bar.html
@@ -16,7 +16,7 @@
 
             {% if user_role == 'moderator' or user_role == 'admin'%}
             <button data-modal-target="edit_community_detail" data-modal-toggle="edit_community_detail"
-                class='bg-button_gray hover:bg-button_gray_hover dark:bg-dark_1 dark:hover:bg-dark_2 shadow-md rounded-full p-2'>
+                class='bg-button_gray hover:bg-button_gray_hover dark:bg-dark_2 dark:hover:bg-gray_2 rounded-full w-[40px] h-[40px] py-2 px-2 flex justify-center items-center'>
                     <svg rpl="" fill="currentColor" height="16" icon-name="edit-outline" viewBox="0 0 20 20"
                         width="16" xmlns="http://www.w3.org/2000/svg">
                         <path
