--- a/templates/components/community/community_rules.html
+++ b/templates/components/community/community_rules.html
@@ -26,7 +26,9 @@
                 <div class="flex flex-row gap-1 items-center">
                     {% if user_role == 'moderator' or user_role == 'admin' %}
                     <div>
-                        <button data-modal-target="edit_community_rule" data-modal-toggle="edit_community_rule"
+                        <button
+                            class="bg-button_gray hover:bg-button_gray_hover dark:bg-dark_2 dark:hover:bg-gray_2 rounded-full w-[40px] h-[40px] py-1 px-1 flex justify-center items-center"
+                            data-modal-target="edit_community_rule" data-modal-toggle="edit_community_rule"
                             onclick="populate_edit_input_values('{{rule.name}}', '{{rule.description}}', '{{rule.id}}')">
                             <svg rpl="" fill="currentColor" height="14" icon-name="edit-outline" viewBox="0 0 20 20"
                                 width="14" xmlns="http://www.w3.org/2000/svg">
@@ -37,7 +39,9 @@
                         </button>
                     </div>
 
-                    <button data-modal-target="delete_community_rule" data-modal-toggle="delete_community_rule"
+                    <button 
+                        class="bg-button_gray hover:bg-button_gray_hover dark:bg-dark_2 dark:hover:bg-gray_2 rounded-full w-[40px] h-[40px] py-1 px-1 flex justify-center items-center"
+                        data-modal-target="delete_community_rule" data-modal-toggle="delete_community_rule"
                         onclick="populate_delete_rule_input_values('{{rule.name}}', '{{rule.description}}', '{{rule.id}}')">
                         <svg rpl="" fill="currentColor" height="14" icon-name="delete-outline" viewBox="0 0 20 20"
                             width="14" xmlns="http://www.w3.org/2000/svg">
@@ -49,7 +53,7 @@
                     {% endif %}
 
                     <svg id="cap-{{rule.id}}" fill="currentColor" height="20" viewBox="0 0 20 20" width="20"
-                        xmlns="http://www.w3.org/2000/svg" class="transition-transform">
+                        xmlns="http://www.w3.org/2000/svg" class="transition-transform bg-button_gray hover:bg-button_gray_hover dark:bg-dark_2 dark:hover:bg-gray_2 rounded-full w-[40px] h-[40px] py-1 px-1 flex justify-center items-center">
                         <path
                             d="M10 13.125a.624.624 0 0 1-.442-.183l-5-5 .884-.884L10 11.616l4.558-4.558.884.884-5 5a.624.624 0 0 1-.442.183Z">
                         </path>
