--- a/templates/components/post/post_detail.html
+++ b/templates/components/post/post_detail.html
@@ -68,22 +68,7 @@
                             <!-- VOTES-->
 
                             <div class="flex flex-row gap-2 mt-4">
-                                <div id="vote_container"
-                                    class="flex flex-row gap-2 px-3 py-1 rounded-xl bg-button_gray {% if post in user_upvoted_posts%}bg-red{%endif%} {% if post in user_downvoted_posts%}bg-blue{%endif%} ">
-                                    <button onclick="event.stopPropagation(); vote(this, '{{post.id}}', 'upvote')" {% if not user.is_authenticated %} disabled {% endif %}>
-                                        <svg rpl="" fill="currentColor" height="16" icon-name="upvote-outline" viewBox="0 0 20 20" width="16" xmlns="http://www.w3.org/2000/svg">
-                                            <path d="M10 19c-.072 0-.145 0-.218-.006A4.1 4.1 0 0 1 6 14.816V11H2.862a1.751 1.751 0 0 1-1.234-2.993L9.41.28a.836.836 0 0 1 1.18 0l7.782 7.727A1.751 1.751 0 0 1 17.139 11H14v3.882a4.134 4.134 0 0 1-.854 2.592A3.99 3.99 0 0 1 10 19Zm0-17.193L2.685 9.071a.251.251 0 0 0 .177.429H7.5v5.316A2.63 2.63 0 0 0 9.864 17.5a2.441 2.441 0 0 0 1.856-.682A2.478 2.478 0 0 0 12.5 15V9.5h4.639a.25.25 0 0 0 .176-.429L10 1.807Z"></path>
-                                        </svg> 
-                                    </button>
-                                    <h1 class="vote_count {% if post in user_upvoted_posts or post in user_downvoted_posts%}text-white{%endif%}"
-                                        data-voted="{% if post in user_upvoted_posts%}upvote{%elif post in user_downvoted_posts %}downvote{%endif%}">
-                                        {{ post|get_vote_counts}}</h1>
-                                    <button onclick="event.stopPropagation(); vote(this, '{{post.id}}', 'downvote')" {% if not user.is_authenticated %} disabled {% endif %}>
-                                        <svg rpl="" fill="currentColor" height="16" icon-name="downvote-outline" viewBox="0 0 20 20" width="16" xmlns="http://www.w3.org/2000/svg">
-                                            <path d="M10 1c.072 0 .145 0 .218.006A4.1 4.1 0 0 1 14 5.184V9h3.138a1.751 1.751 0 0 1 1.234 2.993L10.59 19.72a.836.836 0 0 1-1.18 0l-7.782-7.727A1.751 1.751 0 0 1 2.861 9H6V5.118a4.134 4.134 0 0 1 .854-2.592A3.99 3.99 0 0 1 10 1Zm0 17.193 7.315-7.264a.251.251 0 0 0-.177-.429H12.5V5.184A2.631 2.631 0 0 0 10.136 2.5a2.441 2.441 0 0 0-1.856.682A2.478 2.478 0 0 0 7.5 5v5.5H2.861a.251.251 0 0 0-.176.429L10 18.193Z"></path>
-                                        </svg>
-                                    </button>
-                                </div>
+                                {% include 'components/post/vote_control.html' %}
 
                                 <!-- COMMENTS -->
                                 <div class="px-2 py-1 rounded-xl bg-button_gray hover:bg-button_gray_hover">
@@ -142,80 +127,7 @@
         document.getElementById('commentTextarea').value = '';
     }
 
-    async function vote(button, postId, voteType) {
-        await fetch(`/post/vote/${postId}/${voteType}`, {
-            method: "POST",
-            headers: {
-                "X-CSRFToken": "{{ csrf_token }}",
-            },
-        }).then(async (response) => {
-            const data = await response.json();
-
-            let vote_count = document.getElementById(postId).querySelector(".vote_count");
-            let current_vote_count = parseInt(vote_count.textContent, 10);
-
-            voted = vote_count.dataset.voted
-            const vote_container = document.getElementById('vote_container')
-
-            if (voted == "upvote") {
-                if (voteType == "upvote") {
-                    current_vote_count -= 1
-                    vote_count.dataset.voted = ""
-                    vote_container.classList.remove('bg-red')
-                    vote_container.classList.remove('text-white')
-                    vote_container.classList.add('text-black')
-                    vote_container.querySelectorAll('path').forEach(path => {
-                        path.setAttribute('fill', 'black')
-                    })
-                } else {
-                    current_vote_count -= 2
-                    vote_count.dataset.voted = "downvote"
-                    vote_container.classList.add('bg-blue')
-                    vote_container.classList.remove('bg-red')
-                    vote_container.classList.add('text-white')
-                    vote_container.querySelectorAll('path').forEach(path => {
-                        path.setAttribute('fill', 'white')
-                    })
-                }
-            } else if (voted == "downvote") {
-                if (voteType == "downvote") {
-                    current_vote_count += 1
-                    vote_count.dataset.voted = ""
-                    vote_container.classList.remove('bg-blue')
-                    vote_container.classList.remove('text-white')
-                    vote_container.classList.add('text-black')
-                    vote_container.querySelectorAll('path').forEach(path => {
-                        path.setAttribute('fill', 'black')
-                    })
-                } else {
-                    current_vote_count += 2
-                    vote_count.dataset.voted = "upvote"
-                    vote_container.classList.add('bg-red')
-                    vote_container.classList.remove('bg-blue')
-                    vote_container.classList.add('text-white')
-                    vote_container.querySelectorAll('path').forEach(path => {
-                        path.setAttribute('fill', 'white')
-                    })
-                }
-            } else {
-                if (voteType == "downvote") {
-                    current_vote_count -= 1
-                    vote_count.dataset.voted = "downvote"
-                    vote_container.classList.add('bg-blue')
-                } else {
-                    current_vote_count += 1
-                    vote_count.dataset.voted = "upvote"
-                    vote_container.classList.add('bg-red')
-                }
-                vote_container.classList.add('text-white')
-                vote_container.querySelectorAll('path').forEach(path => {
-                    path.setAttribute('fill', 'white')
-                })
-            }
-            vote_count.textContent = current_vote_count
-        });
-    }
-
+    
     async function submitComment(postId, parentId = null) {
     // Get the correct comment box based on parentId
     const commentBox = parentId ? document.getElementById(`commentBox-${parentId}`) : document.getElementById("commentBox");
