--- a/templates/components/post/submit.html
+++ b/templates/components/post/submit.html
@@ -19,7 +19,7 @@
     {% include 'components/leftbar.html'%}
     <div class="p-10 relative left-[15%] w-[85%]">
         <div class = "flex flex-row justify-between w-full">
-            <form method="POST" action="{% url 'post:create_post' %}" class="w-[50%] flex flex-col gap-3 relative">
+            <form method="POST" action="{% url 'post:create_post' community.name %}" class="w-[50%] flex flex-col gap-3 relative">
                 {% csrf_token %}
                 <h1 class="font-bold text-xl">Create Post</h1>
                 <div class="relative max-w-fit" id="custom-dropdown">
