--- a/templates/components/post/vote_control.html
+++ b/templates/components/post/vote_control.html
@@ -1,14 +1,42 @@
 {% load utils %}
 
 <div class="flex flex-row gap-2 px-3 py-1 rounded-xl {% if post in user_upvoted_posts%}bg-red-500 text-white{%elif post in user_downvoted_posts %}bg-blue-500 text-white{%else%}bg-button_gray{%endif%}">
-    <button onclick="event.stopPropagation(); vote(this.parentElement, '{{post.id}}', 'upvote')" {% if not user.is_authenticated %} disabled {% endif %}>
+
+    <button onclick="
+        event.stopPropagation(); 
+        vote(this.parentElement, '{% if post %}post{% else %}comment{%endif%}', '{%if post %}{{post.id}}{% else %}{{comment.id}}{%endif%}', 'upvote')
+        " 
+
+        {% if not user.is_authenticated %} 
+            data-modal-target="sign_in_modal"
+            data-modal-toggle="sign_in_modal"
+        {% endif %}>
+
         <svg rpl="" fill="currentColor" height="16" icon-name="upvote-outline" viewBox="0 0 20 20" width="16" xmlns="http://www.w3.org/2000/svg">
             <path d="M10 19c-.072 0-.145 0-.218-.006A4.1 4.1 0 0 1 6 14.816V11H2.862a1.751 1.751 0 0 1-1.234-2.993L9.41.28a.836.836 0 0 1 1.18 0l7.782 7.727A1.751 1.751 0 0 1 17.139 11H14v3.882a4.134 4.134 0 0 1-.854 2.592A3.99 3.99 0 0 1 10 19Zm0-17.193L2.685 9.071a.251.251 0 0 0 .177.429H7.5v5.316A2.63 2.63 0 0 0 9.864 17.5a2.441 2.441 0 0 0 1.856-.682A2.478 2.478 0 0 0 12.5 15V9.5h4.639a.25.25 0 0 0 .176-.429L10 1.807Z"></path>
         </svg>
     </button>
+
     <h1 class="vote_count"
-        data-voted="{% if post in user_upvoted_posts%}upvote{%elif post in user_downvoted_posts %}downvote{%endif%}">{{ post|get_vote_counts}}</h1>
-    <button onclick="event.stopPropagation(); vote(this.parentElement, '{{post.id}}', 'downvote')" {% if not user.is_authenticated %} disabled {% endif %}>
+        {% if post %}
+        data-voted="{% if post in user_upvoted_posts%}upvote{%elif post in user_downvoted_posts %}downvote{%endif%}"
+        {% else %}
+        data-voted="{% if post in user_upvoted_comments%}upvote{%elif post in user_downvoted_comments %}downvote{%endif%}"
+        {% endif %}
+        >
+        <!-- SHOULD PROBABLY MAKE THIS INTO A GENERAL QUERY BUT IDC ANYMORE -->
+            {% if post %}
+            {{ post|get_post_vote_counts}}
+            {% else %}
+            {{ comment|get_comment_vote_counts}}
+            {% endif %}
+    </h1>
+
+    <button onclick="event.stopPropagation(); vote(this.parentElement, '{{post.id}}', 'downvote')" 
+        {% if not user.is_authenticated %} 
+            data-modal-target="sign_in_modal"
+            data-modal-toggle="sign_in_modal"
+        {% endif %}>
         <svg rpl="" fill="currentColor" height="16" icon-name="downvote-outline" viewBox="0 0 20 20" width="16" xmlns="http://www.w3.org/2000/svg">
             <path d="M10 1c.072 0 .145 0 .218.006A4.1 4.1 0 0 1 14 5.184V9h3.138a1.751 1.751 0 0 1 1.234 2.993L10.59 19.72a.836.836 0 0 1-1.18 0l-7.782-7.727A1.751 1.751 0 0 1 2.861 9H6V5.118a4.134 4.134 0 0 1 .854-2.592A3.99 3.99 0 0 1 10 1Zm0 17.193 7.315-7.264a.251.251 0 0 0-.177-.429H12.5V5.184A2.631 2.631 0 0 0 10.136 2.5a2.441 2.441 0 0 0-1.856.682A2.478 2.478 0 0 0 7.5 5v5.5H2.861a.251.251 0 0 0-.176.429L10 18.193Z"></path>
         </svg>
