fixed inputs, started fixing comments

--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
     <script src="{% static 'js/tailwind.js'%}"></script>
 
     <!-- Flowbite -->
-    <link rel="stylesheet" href="{% static 'css/flowbite.min.css'%}" />
+    <!-- <link rel="stylesheet" href="{% static 'css/flowbite.min.css'%}" /> -->
     <script src="{% static 'js/flowbite.min.js'%}"></script>
 
     <!-- Toast -->
