--- a/templates/components/account/edit-display-name-modal.html
+++ b/templates/components/account/edit-display-name-modal.html
@@ -53,6 +53,7 @@
               value="{% if request.user.display_name %}{{ request.user.display_name }}{% endif %}"
               class="border-1 dark:focus:border-blue-500 focus:border-blue-600 peer block w-full appearance-none rounded-lg border-gray-300 bg-white_1 px-2.5 pb-2.5 pt-4 text-sm text-gray-900 focus:outline-none focus:ring-0 dark:border-gray-600 dark:bg-dark_6 dark:text-white"
               placeholder=" "
+              maxlength="64"
               required
             />
             <label
