--- a/templates/components/post/submit.html
+++ b/templates/components/post/submit.html
@@ -61,7 +61,7 @@
                     {% endfor %}
                 </select>
 
-                <input name="title" type="text" placeholder="Title"
+                <input name="title" type="text" maxlength="300" placeholder="Title"
                     class="border dark:border-[#ffffff33] dark:bg-[#1A1A1B] dark:text-white px-3 py-2 rounded-md " required />
                 <div class="w-full">
                     {% include 'components/editor.html' %}
