--- a/templates/components/account/profile.html
+++ b/templates/components/account/profile.html
@@ -3,7 +3,7 @@
 <div class="relative top-[10vh] flex w-full flex-row">
   {% include 'components/leftbar.html'%}
 
-  <div class="relative left-[15%] flex w-[85%] flex-row gap-10 p-10">
+  <div class="relative left-[15%] flex w-[85%] flex-row gap-10 p-10 break-words">
     <div class="flex w-[70%] flex-col gap-6">
       <div class="flex flex-col gap-10">
         <div class="flex flex-row items-center gap-2">
