--- a/templates/components/community/create_community.html
+++ b/templates/components/community/create_community.html
@@ -111,7 +111,7 @@
                             <div class="relative">
                                 <input type="text" name="community_name" id="create_community_community_name_input"
                                     class="bg-white_1 dark:bg-dark_6 block px-2.5 pb-2.5 pt-4 w-full text-sm text-gray-900 rounded-lg border-1 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer"
-                                    placeholder=" " required />
+                                    placeholder=" " maxlength="64" required />
                                 <label for="create_community_community_name_input"
                                     class="absolute text-sm font-medium text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-4 scale-75 top-4 z-10 origin-[0] start-2.5 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-4 rtl:peer-focus:translate-x-1/4 rtl:peer-focus:left-auto">Community
                                     Name</label>
