--- a/templates/components/community/edit_community_rule.html
+++ b/templates/components/community/edit_community_rule.html
@@ -26,7 +26,7 @@
                 <label for="default-input" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Rule
                     Name</label>
                 <input id="input_edit_rule_id" name="rule_id" type="hidden">
-                <input id="input_edit_rule_name" name="rule_name" type="text" id="default-input"
+                <input id="input_edit_rule_name" name="rule_name" type="text" maxlength="64"   id="default-input"
                     class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                     maxlength="64">
 
